--- a/github/workflows/pages.yml
+++ b/github/workflows/pages.yml
@@ -6,6 +6,9 @@ on:
       - main
     paths-ignore:
       - 'thumbs/**'
+      - 'feed.xml'
+      - 'newsletter.html'
+      - 'preview.html'
 
 jobs:
   build:
