--- a/.github/workflows/resize-thumbs.yml
+++ b/.github/workflows/resize-thumbs.yml
@@ -4,7 +4,7 @@ on:
   push:
     paths:
       - 'thumbs/**'
-      
+
 permissions:
   contents: write
 
@@ -13,8 +13,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out repo
+      - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # IMPORTANT: allows pulling latest commits
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -24,13 +26,16 @@ jobs:
       - name: Install Sharp
         run: npm install sharp
 
-      - name: Resize and convert to WebP
+      - name: Optimize thumbnails
         run: node scripts/resize-thumbs.js
+
+      - name: Pull latest changes
+        run: git pull --rebase origin main
 
       - name: Commit optimized thumbnails
         run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
           git add thumbs/
-          git commit -m "Optimize thumbnails to WebP" || echo "No changes"
+          git commit -m "Optimize thumbnails" || echo "No changes to commit"
           git push
