--- a/.github/workflows/resize-thumbs.yml
+++ b/.github/workflows/resize-thumbs.yml
@@ -3,13 +3,12 @@ name: Optimize Thumbnails
 on:
   push:
     paths:
-      - [cite_start]'thumbs/**.raw' # Only trigger when a NEW uncompressed file arrives 
+      - 'thumbs/**.raw'  # Line 5: Correctly indented trigger
 
 jobs:
   optimize:
     runs-on: ubuntu-latest
-    # Prevents the action from running on its own commits
-    if: github.actor != 'github-actions[bot]' 
+    if: github.actor != 'github-actions[bot]'
 
     steps:
       - name: Checkout repo
@@ -20,8 +19,8 @@ jobs:
         with:
           node-version: 20
 
-      - name: Install dependencies
-        [cite_start]run: npm install sharp [cite: 19]
+      - name: Install Sharp
+        run: npm install sharp
 
       - name: Run Optimization Script
         run: node scripts/resize-thumbs.js
@@ -32,5 +31,5 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add thumbs/*.webp
           git rm thumbs/*.raw || echo "No .raw files to remove"
-          git commit -m "Auto-optimize thumbnails to 300px WebP" || echo "No changes"
+          git commit -m "Auto-optimize thumbnails" || echo "No changes"
           git push
