--- a/.github/workflows/resize-thumbs.yml
+++ b/.github/workflows/resize-thumbs.yml
@@ -5,7 +5,6 @@ on:
     paths:
       - 'thumbs/**.raw'
 
-# ADD THIS SECTION:
 permissions:
   contents: write
 
@@ -13,12 +12,12 @@ jobs:
   optimize:
     runs-on: ubuntu-latest
     if: github.actor != 'github-actions[bot]'
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          # Use a personal access token if you have complex branch protections
-          token: ${{ secrets.GITHUB_TOKEN }} 
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -31,23 +30,16 @@ jobs:
       - name: Run Optimization Script
         run: node scripts/resize-thumbs.js
 
-- name: Commit optimized images
+      - name: Commit optimized images
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          
-          # Add and commit the new files
           git add thumbs/*.webp
           git rm thumbs/*.raw || echo "No .raw files to remove"
-          
-          # Only proceed if there are actual changes to commit
-          if git diff --staged --quiet; then
-            echo "No changes to commit"
-          else
+          if [ -n "$(git status --porcelain)" ]; then
             git commit -m "Auto-optimize thumbnails"
-            
-            # Pull with rebase to integrate changes made by Apps Script while this was running
             git pull --rebase origin main
-            
             git push
+          else
+            echo "No changes to commit"
           fi
