--- a/.github/workflows/resize-thumbs.yml
+++ b/.github/workflows/resize-thumbs.yml
@@ -6,19 +6,25 @@ on:
       - 'thumbs/**.raw'
   workflow_dispatch:
 
+# Prevents multiple runs from colliding; they will queue instead of canceling
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
+
 permissions:
   contents: write
 
 jobs:
   optimize:
     runs-on: ubuntu-latest
+    # Prevents the bot from triggering its own workflow in an infinite loop
     if: github.actor != 'github-actions[bot]'
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Fetches full history for reliable rebasing
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -36,25 +42,29 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
-          # Stage all changes (new webps and deleted raws)
+          # Stage all changes: new .webp files and deleted .raw files
           git add thumbs/*.webp
-          git add -u thumbs/*.raw || echo "No raws to remove"
+          git add -u thumbs/*.raw || echo "No .raw files to remove"
           
+          # Only proceed if there are actual changes to commit
           if [ -n "$(git status --porcelain)" ]; then
             git commit -m "Automated thumbnail optimization"
             
-            # Retry loop to handle the "cannot lock ref" and race conditions
+            # Retry loop (up to 5 times) to handle "cannot lock ref" or "rejected" errors
             for i in {1..5}; do
               echo "Attempt $i to sync and push..."
-              # Fetch and rebase to integrate Apps Script changes
+              
+              # Pull latest changes from Apps Script (like newsletter.html)
+              # and place our image commits on top of them
               if git pull --rebase origin main && git push origin main; then
                 echo "Push successful"
                 exit 0
               fi
-              echo "Push failed, retrying in 5s..."
+              
+              echo "Conflict or lock detected, retrying in 5 seconds..."
               sleep 5
             done
-            exit 1
+            exit 1 # Fail the job if all 5 attempts fail
           else
-            echo "No changes to commit"
+            echo "No image changes to commit"
           fi
