--- a/.github/workflows/resize-thumbs.yml
+++ b/.github/workflows/resize-thumbs.yml
@@ -3,9 +3,8 @@ name: Optimize Thumbnails
 on:
   push:
     paths:
-      - 'thumbs/**'
+      - 'newsletter.html'   # Trigger ONLY after newsletter is updated
 
-# 🔐 REQUIRED PERMISSIONS
 permissions:
   contents: write
 
@@ -14,39 +13,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repo
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0   # Required so we can pull/rebase
 
-      # Setup Node
-      - name: Setup Node
+      - name: Set up Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
 
-      # Install Sharp image library
-      - name: Install dependencies
+      - name: Install Sharp
         run: npm install sharp
 
-      # Run optimizer script
       - name: Optimize thumbnails
         run: node scripts/resize-thumbs.js
 
-      # Commit optimized images back to repo
-- name: Commit optimized thumbnails
-  run: |
-    git config user.name "github-actions"
-    git config user.email "actions@github.com"
+      - name: Pull latest changes
+        run: git pull --rebase origin main
 
-    # Pull latest changes first (fix push rejection)
-    git pull --rebase
-
-    # Stage optimized files
-    git add thumbs/*
-
-    # Commit only if changes exist
-    git diff --staged --quiet || git commit -m "Auto optimize thumbnails"
-
-    # Push back to repo
-    git push
-
+      - name: Commit optimized thumbnails
+        run: |
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git add thumbs/
+          git commit -m "Optimize thumbnails" || echo "No changes to commit"
+          git push
