--- a/.github/workflows/resize-thumbs.yml
+++ b/.github/workflows/resize-thumbs.yml
@@ -3,7 +3,7 @@ name: Optimize Thumbnails
 on:
   push:
     paths:
-      - 'newsletter.html'   # Trigger ONLY after newsletter is updated
+      - 'newsletter.html'
 
 permissions:
   contents: write
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # Required so we can pull/rebase
+          fetch-depth: 0
 
       - name: Set up Node
         uses: actions/setup-node@v4
@@ -29,13 +29,15 @@ jobs:
       - name: Optimize thumbnails
         run: node scripts/resize-thumbs.js
 
-      - name: Pull latest changes
-        run: git pull --rebase origin main
-
       - name: Commit optimized thumbnails
         run: |
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
           git add thumbs/
           git commit -m "Optimize thumbnails" || echo "No changes to commit"
-          git push
+
+      - name: Pull latest changes
+        run: git pull --rebase origin main
+
+      - name: Push changes
+        run: git push
