--- a/.github/workflows/resize-thumbs.yml
+++ b/.github/workflows/resize-thumbs.yml
@@ -3,7 +3,13 @@ name: Optimize Thumbnails
 on:
   push:
     paths:
-      - 'newsletter.html'
+      - 'thumbs/**.raw'
+  workflow_dispatch:
+
+# Prevents multiple runs from colliding during high-volume uploads
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: false
 
 permissions:
   contents: write
@@ -11,6 +17,8 @@ permissions:
 jobs:
   optimize:
     runs-on: ubuntu-latest
+    # Prevents the bot from triggering itself in an infinite loop
+    if: github.actor != 'github-actions[bot]'
 
     steps:
       - name: Checkout repo
@@ -18,7 +26,7 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up Node
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -26,18 +34,32 @@ jobs:
       - name: Install Sharp
         run: npm install sharp
 
-      - name: Optimize thumbnails
+      - name: Run Optimization Script
+        # This executes your custom node script to process the images
         run: node scripts/resize-thumbs.js
 
-      - name: Commit optimized thumbnails
+      - name: Commit and Push with Retry
         run: |
-          git config user.name "GitHub Actions"
-          git config user.email "actions@github.com"
-          git add thumbs/
-          git commit -m "Optimize thumbnails" || echo "No changes to commit"
-
-      - name: Pull latest changes
-        run: git pull --rebase origin main
-
-      - name: Push changes
-        run: git push
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          
+          # Stage new webp files and record the deletion of .raw files
+          git add thumbs/*.webp
+          git add -u thumbs/*.raw || echo "No .raw files to remove"
+          
+          if [ -n "$(git status --porcelain)" ]; then
+            git commit -m "Automated thumbnail optimization"
+            
+            # Retry loop to handle push conflicts if Apps Script updates newsletter.html simultaneously
+            for i in {1..5}; do
+              echo "Push attempt $i..."
+              if git pull --rebase origin main && git push origin main; then
+                echo "Success"
+                exit 0
+              fi
+              sleep 5
+            done
+            exit 1
+          else
+            echo "No changes to commit"
+          fi
